Create dagger gradle junit task but tests fails, don't know why!!!